--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dagrejs/dagre": "^1.1.5",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.0",
+    "@xyflow/react": "^12.8.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "uuid": "^11.0.3",
